// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HEADER_SET_ARCHETYPE 1`] = `
Object {
  "archetype": "warrior",
  "archetypeModified": true,
  "concept": "No Concept",
  "history": Array [
    Object {
      "type": "INITIAL_STATE",
    },
    Object {
      "archetype": "warrior",
      "type": "HEADER_SET_ARCHETYPE",
    },
  ],
  "name": "No Name",
  "rank": "",
  "rankModified": false,
  "skills": Array [
    Object {
      "name": "Awareness",
      "specialities": Immutable.List [
],
      "value": 0,
    },
    Object {
      "name": "Confidence",
      "specialities": Immutable.List [
],
      "value": 0,
    },
    Object {
      "name": "Crafting",
      "specialities": Immutable.List [
],
      "value": 0,
    },
    Object {
      "name": "Finesse",
      "specialities": Immutable.List [
],
      "value": 0,
    },
    Object {
      "name": "Hardiness",
      "specialities": Immutable.List [
],
      "value": 0,
    },
    Object {
      "name": "Inspire",
      "specialities": Immutable.List [
],
      "value": 0,
    },
    Object {
      "name": "Learning",
      "specialities": Immutable.List [
],
      "value": 0,
    },
    Object {
      "name": "Medicine",
      "specialities": Immutable.List [
],
      "value": 0,
    },
    Object {
      "name": "Might",
      "specialities": Immutable.List [
],
      "value": 0,
    },
    Object {
      "name": "Perform",
      "specialities": Immutable.List [
],
      "value": 0,
    },
    Object {
      "name": "Politics",
      "specialities": Immutable.List [
],
      "value": 0,
    },
    Object {
      "name": "Ride",
      "specialities": Immutable.List [
],
      "value": 0,
    },
    Object {
      "name": "Stealth",
      "specialities": Immutable.List [
],
      "value": 0,
    },
    Object {
      "name": "Survival",
      "specialities": Immutable.List [
],
      "value": 0,
    },
    Object {
      "name": "Tactics",
      "specialities": Immutable.List [
],
      "value": 0,
    },
    Object {
      "name": "Wu Wei",
      "specialities": Immutable.List [
],
      "value": 0,
    },
  ],
}
`;

exports[`HEADER_SET_CONCEPT 1`] = `
Object {
  "archetype": "",
  "archetypeModified": false,
  "concept": "Sir Robert",
  "history": Array [
    Object {
      "type": "INITIAL_STATE",
    },
    Object {
      "concept": "Sir Robert",
      "type": "HEADER_SET_CONCEPT",
    },
  ],
  "name": "No Name",
  "rank": "",
  "rankModified": false,
  "skills": Array [
    Object {
      "name": "Awareness",
      "specialities": Immutable.List [
],
      "value": 0,
    },
    Object {
      "name": "Confidence",
      "specialities": Immutable.List [
],
      "value": 0,
    },
    Object {
      "name": "Crafting",
      "specialities": Immutable.List [
],
      "value": 0,
    },
    Object {
      "name": "Finesse",
      "specialities": Immutable.List [
],
      "value": 0,
    },
    Object {
      "name": "Hardiness",
      "specialities": Immutable.List [
],
      "value": 0,
    },
    Object {
      "name": "Inspire",
      "specialities": Immutable.List [
],
      "value": 0,
    },
    Object {
      "name": "Learning",
      "specialities": Immutable.List [
],
      "value": 0,
    },
    Object {
      "name": "Medicine",
      "specialities": Immutable.List [
],
      "value": 0,
    },
    Object {
      "name": "Might",
      "specialities": Immutable.List [
],
      "value": 0,
    },
    Object {
      "name": "Perform",
      "specialities": Immutable.List [
],
      "value": 0,
    },
    Object {
      "name": "Politics",
      "specialities": Immutable.List [
],
      "value": 0,
    },
    Object {
      "name": "Ride",
      "specialities": Immutable.List [
],
      "value": 0,
    },
    Object {
      "name": "Stealth",
      "specialities": Immutable.List [
],
      "value": 0,
    },
    Object {
      "name": "Survival",
      "specialities": Immutable.List [
],
      "value": 0,
    },
    Object {
      "name": "Tactics",
      "specialities": Immutable.List [
],
      "value": 0,
    },
    Object {
      "name": "Wu Wei",
      "specialities": Immutable.List [
],
      "value": 0,
    },
  ],
}
`;

exports[`HEADER_SET_NAME 1`] = `
Object {
  "archetype": "",
  "archetypeModified": false,
  "concept": "No Concept",
  "history": Array [
    Object {
      "type": "INITIAL_STATE",
    },
    Object {
      "name": "Robert",
      "type": "HEADER_SET_NAME",
    },
  ],
  "name": "Robert",
  "rank": "",
  "rankModified": false,
  "skills": Array [
    Object {
      "name": "Awareness",
      "specialities": Immutable.List [
],
      "value": 0,
    },
    Object {
      "name": "Confidence",
      "specialities": Immutable.List [
],
      "value": 0,
    },
    Object {
      "name": "Crafting",
      "specialities": Immutable.List [
],
      "value": 0,
    },
    Object {
      "name": "Finesse",
      "specialities": Immutable.List [
],
      "value": 0,
    },
    Object {
      "name": "Hardiness",
      "specialities": Immutable.List [
],
      "value": 0,
    },
    Object {
      "name": "Inspire",
      "specialities": Immutable.List [
],
      "value": 0,
    },
    Object {
      "name": "Learning",
      "specialities": Immutable.List [
],
      "value": 0,
    },
    Object {
      "name": "Medicine",
      "specialities": Immutable.List [
],
      "value": 0,
    },
    Object {
      "name": "Might",
      "specialities": Immutable.List [
],
      "value": 0,
    },
    Object {
      "name": "Perform",
      "specialities": Immutable.List [
],
      "value": 0,
    },
    Object {
      "name": "Politics",
      "specialities": Immutable.List [
],
      "value": 0,
    },
    Object {
      "name": "Ride",
      "specialities": Immutable.List [
],
      "value": 0,
    },
    Object {
      "name": "Stealth",
      "specialities": Immutable.List [
],
      "value": 0,
    },
    Object {
      "name": "Survival",
      "specialities": Immutable.List [
],
      "value": 0,
    },
    Object {
      "name": "Tactics",
      "specialities": Immutable.List [
],
      "value": 0,
    },
    Object {
      "name": "Wu Wei",
      "specialities": Immutable.List [
],
      "value": 0,
    },
  ],
}
`;
